--- a/views/admin-lte/index.ejs
+++ b/views/admin-lte/index.ejs
@@ -1,28 +1,4 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <meta charset="UTF-8">
-  <title>Video MOOC</title>
-  <meta content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no' name='viewport'>
-  <!-- Bootstrap 3.3.2-->
-  <link href="/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
-  <link href="/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
-  <link href="/ionicons/css/ionicons.min.css" rel="stylesheet" type="text/css" />
-
-  <!-- Themes -->
-  <link href="/admin-lte/css/AdminLTE.min.css" rel="stylesheet" type="text/css" />
-  <link href="/admin-lte/css/skins/skin-blue.min.css" rel="stylesheet" type="text/css" />
-
-  <!--[if lt IE 9]>
-  <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-  <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
-  <![endif]-->
-</head>
-<!--
-skin-black
-layout-top-nav | fixed | sidebar-collapse
--->
-<body class="skin-blue">
+<% include header %>
 <div class="wrapper">
 
   <!-- Main Header -->
@@ -248,18 +224,11 @@ layout-top-nav | fixed | sidebar-collapse
   <footer class="main-footer">
     <!-- To the right -->
     <div class="pull-right hidden-xs">
-      Anything you want
+      &nbsp;
     </div>
     <!-- Default to the left -->
     <strong>Copyright &copy; 2015 <a href="#">i9</a>.</strong> All rights reserved.
   </footer>
 
 </div><!-- ./wrapper -->
-
-<!-- REQUIRED JS SCRIPTS -->
-<script src="/jquery/jquery.min.js"></script>
-<script src="/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
-<!-- AdminLTE App -->
-<script src="/admin-lte/js/app.min.js" type="text/javascript"></script>
-</body>
-</html>
+<% include footer %>
