--- a/views/admin-lte/index.ejs
+++ b/views/admin-lte/index.ejs
@@ -32,7 +32,7 @@
                     <a href="#">
                       <div class="pull-left">
                         <!-- User Image -->
-                        <img src="dist/img/user2-160x160.jpg" class="img-circle" alt="User Image"/>
+                        <img src="/img/user2-160x160.jpg" class="img-circle" alt="User Image"/>
                       </div>
                       <!-- Message title and timestamp -->
                       <h4>
