--- a/views/admin-lte/error.ejs
+++ b/views/admin-lte/error.ejs
@@ -1,3 +1,5 @@
+<% include header %>
 <h1><%= message %></h1>
 <h2><%= error.status %></h2>
-<pre><%= error.stack %></pre>
+<pre class="error"><%= error.stack %></pre>
+<% include footer %>
