cleaning up homepage

--- a/views/admin-lte/header.ejs
+++ b/views/admin-lte/header.ejs
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Video MOOC</title>
+    <title>Map MOOC</title>
     <meta content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no' name='viewport'>
     <!-- Bootstrap 3.3.2-->
     <link href="/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
@@ -11,7 +11,7 @@
 
     <!-- Themes -->
     <link href="/admin-lte/css/AdminLTE.min.css" rel="stylesheet" type="text/css" />
-    <link href="/admin-lte/css/skins/skin-blue.min.css" rel="stylesheet" type="text/css" />
+    <link href="/admin-lte/css/skin-blue.min.css" rel="stylesheet" type="text/css" />
 
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
@@ -22,4 +22,4 @@
 skin-black
 layout-top-nav | fixed | sidebar-collapse
 -->
-<body class="skin-blue">
+<body class="skin-blue sidebar-collapse">
