can route api now

--- a/views/admin-lte/index.ejs
+++ b/views/admin-lte/index.ejs
@@ -20,7 +20,7 @@
             <ul class="dropdown-menu">
               <li class="header">Please fill in your detail</li>
               <li>
-                <!-- Inner menu: contains the tasks -->
+                <!-- Inner menu: contains the login dropdown -->
                 <ul class="menu">
                   <li><!-- Task item -->
                     <a href="#">
