--- a/views/admin-lte/footer.ejs
+++ b/views/admin-lte/footer.ejs
@@ -1,6 +1,7 @@
 <!-- REQUIRED JS SCRIPTS -->
 <script src="/jquery/jquery.min.js"></script>
 <script src="/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
+<script src="/angular/angular.min.js" type="text/javascript"></script>
 <!-- AdminLTE App -->
 <script src="/admin-lte/js/app.min.js" type="text/javascript"></script>
 </body>
