--- a/views/admin-lte/header.ejs
+++ b/views/admin-lte/header.ejs
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html ng-app>
 <head>
     <meta charset="UTF-8">
-    <title>Map MOOC</title>
+    <title>CourseMap MOOC</title>
     <meta content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no' name='viewport'>
     <!-- Bootstrap 3.3.2-->
     <link href="/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
