--- a/views/admin-lte/index.ejs
+++ b/views/admin-lte/index.ejs
@@ -18,21 +18,21 @@
               <b>Login</b>
             </a>
             <ul class="dropdown-menu">
-              <li class="header">Please fill in your detail</li>
               <li>
-                <!-- Inner menu: contains the login dropdown -->
-                <ul class="menu">
-                  <li><!-- Task item -->
-                    <a href="#">
-                      <!-- Task title and progress text -->
-                      Username : <br />
-                      Password : <br />
-                    </a>
-                  </li><!-- end task item -->
-                </ul>
-              </li>
-              <li class="footer">
-                <a href="#">Login</a>
+                <form class="form-signin">
+                  <h3 class="form-signin-heading">Please log in</h3>
+                  <label for="inputEmail" class="sr-only">Email address</label>
+                  <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
+                  <label for="inputPassword" class="sr-only">Password</label>
+                  <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+                  <div class="checkbox">
+                    <label>
+                      <input type="checkbox" value="remember-me"> Remember me
+                    </label>
+                  </div>
+                  <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+                </form>
+
               </li>
             </ul>
           </li>
