--- a/views/admin-lte/index.ejs
+++ b/views/admin-lte/index.ejs
@@ -19,12 +19,12 @@
             </a>
             <ul class="dropdown-menu">
               <li>
-                <form class="form-signin">
+                <form class="form-signin" action="/accounts/login" method="post">
                   <h3 class="form-signin-heading">Please log in</h3>
-                  <label for="inputEmail" class="sr-only">Email address</label>
-                  <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
+                  <label for="inputUsername" class="sr-only">Username</label>
+                  <input name="username" type="text" id="inputUsername" class="form-control" placeholder="Username" required autofocus>
                   <label for="inputPassword" class="sr-only">Password</label>
-                  <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+                  <input name="password" type="password" id="inputPassword" class="form-control" placeholder="Password" required>
                   <div class="checkbox">
                     <label>
                       <input type="checkbox" value="remember-me"> Remember me
