--- a/views/admin-lte/index.ejs
+++ b/views/admin-lte/index.ejs
@@ -27,7 +27,7 @@
                   <input name="password" type="password" id="inputPassword" class="form-control" placeholder="Password" required>
                   <div class="checkbox">
                     <label>
-                      <input type="checkbox" value="remember-me"> Remember me
+                      <input type="checkbox" value="yes" name="rememberMe"> Remember me
                     </label>
                   </div>
                   <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
