--- a/views/admin-lte/footer.ejs
+++ b/views/admin-lte/footer.ejs
@@ -2,6 +2,9 @@
 <script src="/jquery/jquery.min.js"></script>
 <script src="/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
 <script src="/angular/angular.min.js" type="text/javascript"></script>
+<script src="/angular/angular-route.min.js"></script>
+<script src="/angular/angular-resource.min.js"></script>
+<script src="/angular/courseMapper.js"></script>
 <!-- AdminLTE App -->
 <script src="/admin-lte/js/app.min.js" type="text/javascript"></script>
 </body>
