--- a/views/admin-lte/header.ejs
+++ b/views/admin-lte/header.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app>
+<html ng-app="courseMapper">
 <head>
     <meta charset="UTF-8">
     <title>CourseMap MOOC</title>
@@ -8,6 +8,7 @@
     <link href="/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <link href="/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
     <link href="/ionicons/css/ionicons.min.css" rel="stylesheet" type="text/css" />
+    <link rel="icon" href="favicon.png" type="image/png" />
 
     <!-- Themes -->
     <link href="/admin-lte/css/AdminLTE.min.css" rel="stylesheet" type="text/css" />
