--- a/views/admin-lte/index.ejs
+++ b/views/admin-lte/index.ejs
@@ -5,88 +5,10 @@
   <header class="main-header">
 
     <!-- Logo -->
-    <a href="index2.html" class="logo"><b>Course</b>Mapper</a>
+    <a href="/" class="logo"><b>Course</b>Mapper</a>
 
     <!-- Header Navbar -->
-    <nav class="navbar navbar-static-top" role="navigation">
-      <!-- Navbar Right Menu -->
-      <div class="navbar-custom-menu">
-        <ul class="nav navbar-nav">
-          <!-- Messages: style can be found in dropdown.less-->
-          <li class="dropdown tasks-menu">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-              <b>Login</b>
-            </a>
-            <ul class="dropdown-menu">
-              <li>
-                <form class="form-signin" action="/accounts/login" method="post">
-                  <h3 class="form-signin-heading">Please log in</h3>
-                  <label for="inputUsername" class="sr-only">Username</label>
-                  <input name="username" type="text" id="inputUsername" class="form-control" placeholder="Username" required autofocus>
-                  <label for="inputPassword" class="sr-only">Password</label>
-                  <input name="password" type="password" id="inputPassword" class="form-control" placeholder="Password" required>
-                  <div class="checkbox">
-                    <label>
-                      <input type="checkbox" value="yes" name="rememberMe"> Remember me
-                    </label>
-                  </div>
-                  <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-                </form>
-
-              </li>
-            </ul>
-          </li>
-          <li class="">
-            <a href="#" >
-              <b>Sign Up</b>
-            </a>
-          </li>
-
-          <!-- User Account Menu
-          <li class="dropdown user user-menu">
-
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-
-              <img src="images/user2-160x160.png" class="user-image" alt="User Image"/>
-
-              <span class="hidden-xs">Alexander Pierce</span>
-            </a>
-            <ul class="dropdown-menu">
-
-              <li class="user-header">
-                <img src="dist/img/user2-160x160.jpg" class="img-circle" alt="User Image" />
-                <p>
-                  Alexander Pierce - Web Developer
-                  <small>Member since Nov. 2012</small>
-                </p>
-              </li>
-
-              <li class="user-body">
-                <div class="col-xs-4 text-center">
-                  <a href="#">Followers</a>
-                </div>
-                <div class="col-xs-4 text-center">
-                  <a href="#">Sales</a>
-                </div>
-                <div class="col-xs-4 text-center">
-                  <a href="#">Friends</a>
-                </div>
-              </li>
-
-              <li class="user-footer">
-                <div class="pull-left">
-                  <a href="#" class="btn btn-default btn-flat">Profile</a>
-                </div>
-                <div class="pull-right">
-                  <a href="#" class="btn btn-default btn-flat">Sign out</a>
-                </div>
-              </li>
-            </ul>
-          </li>
-          -->
-        </ul>
-      </div>
-    </nav>
+    <% include mainMenu %>
   </header>
 
   <!-- Content Wrapper. Contains page content -->
