--- a/views/admin-lte/index.ejs
+++ b/views/admin-lte/index.ejs
@@ -13,25 +13,10 @@
 
   <!-- Content Wrapper. Contains page content -->
   <div class="content-wrapper">
-
-
     <!-- Main content -->
-    <section class="content">
-
-      <!-- Your Page Content Here -->
-
+    <section class="content" id="tree">
     </section><!-- /.content -->
   </div><!-- /.content-wrapper -->
-
-  <!-- Main Footer -->
-  <footer class="main-footer">
-    <!-- To the right -->
-    <div class="pull-right hidden-xs">
-      &nbsp;
-    </div>
-    <!-- Default to the left -->
-    <strong>Copyright &copy; 2015 <a href="#">i9</a>.</strong> All rights reserved.
-  </footer>
 
 </div><!-- ./wrapper -->
 <% include footer %>
