--- a/views/admin-lte/footer.ejs
+++ b/views/admin-lte/footer.ejs
@@ -1,3 +1,8 @@
+<!-- Main Footer -->
+<footer class="main-footer">
+    <strong>Copyright &copy; 2015 <a href="#">i9</a>.</strong> All rights reserved.
+</footer>
+
 <!-- REQUIRED JS SCRIPTS -->
 <script src="/jquery/jquery.min.js"></script>
 <script src="/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
@@ -7,5 +12,7 @@
 <script src="/angular/courseMapper.js"></script>
 <!-- AdminLTE App -->
 <script src="/admin-lte/js/app.min.js" type="text/javascript"></script>
+<script src="/d3/d3.min.js"></script>
+<script src="/d3/tree.js"></script>
 </body>
 </html>
