--- a/views/admin-lte/header.ejs
+++ b/views/admin-lte/header.ejs
@@ -13,6 +13,7 @@
     <!-- Themes -->
     <link href="/admin-lte/css/AdminLTE.min.css" rel="stylesheet" type="text/css" />
     <link href="/admin-lte/css/skin-blue.min.css" rel="stylesheet" type="text/css" />
+    <link href="/d3/tree.css" rel="stylesheet" type="text/css" />
 
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
