--- a/views/admin-lte/error.ejs
+++ b/views/admin-lte/error.ejs
@@ -2,4 +2,5 @@
 <h1><%= message %></h1>
 <h2><%= error.status %></h2>
 <pre class="error"><%= error.stack %></pre>
+<% include jsfooter %>
 <% include footer %>
