--- a/views/admin-lte/index.ejs
+++ b/views/admin-lte/index.ejs
@@ -1,22 +1,16 @@
 <% include header %>
 <div class="wrapper">
 
-  <!-- Main Header -->
-  <header class="main-header">
-
-    <!-- Logo -->
-    <a href="/" class="logo"><b>Course</b>Mapper</a>
-
-    <!-- Header Navbar -->
-    <% include mainMenu %>
-  </header>
+  <!-- Header Navbar -->
+  <% include mainMenu %>
 
   <!-- Content Wrapper. Contains page content -->
   <div class="content-wrapper">
     <!-- Main content -->
-    <section class="content" id="tree">
+    <section class="content">
     </section><!-- /.content -->
   </div><!-- /.content-wrapper -->
 
 </div><!-- ./wrapper -->
+<% include jsfooter %>
 <% include footer %>
