--- a/views/admin-lte/signUp.ejs
+++ b/views/admin-lte/signUp.ejs
@@ -1,19 +1,11 @@
 <% include header %>
 <div class="wrapper">
 
-    <!-- Main Header -->
-    <header class="main-header">
-
-        <!-- Logo -->
-        <a href="/" class="logo"><b>Course</b>Mapper</a>
-
-        <!-- Header Navbar -->
-        <% include mainMenu %>
-    </header>
+    <!-- Header Navbar -->
+    <% include mainMenu %>
 
     <!-- Content Wrapper. Contains page content -->
     <div class="content-wrapper">
-
 
         <!-- Main content -->
         <section class="content">
@@ -41,15 +33,6 @@
         </section><!-- /.content -->
     </div><!-- /.content-wrapper -->
 
-    <!-- Main Footer -->
-    <footer class="main-footer">
-        <!-- To the right -->
-        <div class="pull-right hidden-xs">
-            &nbsp;
-        </div>
-        <!-- Default to the left -->
-        <strong>Copyright &copy; 2015 <a href="#">i9</a>.</strong> All rights reserved.
-    </footer>
-
 </div><!-- ./wrapper -->
+<% include jsfooter %>
 <% include footer %>
