--- a/views/admin-lte/mainMenu.ejs
+++ b/views/admin-lte/mainMenu.ejs
@@ -1,5 +1,20 @@
+<!-- Main Header -->
+<header class="main-header">
+    <!-- Logo -->
+    <a href="/" class="logo"><b>Course</b>Mapper</a>
 
 <nav class="navbar navbar-static-top" role="navigation" ng-controller="MainMenuController as mainMenu">
+    <div class="navbar-left">
+        <ul class="nav navbar-nav">
+            <!-- Messages: style can be found in dropdown.less-->
+            <li class="dropdown tasks-menu">
+                <a href="/catalogs/courses"><b>Browse Courses</b></a>
+            </li>
+            <li class="dropdown tasks-menu">
+            <a href="/catalogs/courses"><b>About Us</b></a>
+        </li>
+        </ul>
+    </div>
     <!-- Navbar Right Menu -->
     <div class="navbar-custom-menu">
         <ul class="nav navbar-nav">
@@ -10,7 +25,6 @@
                 </a>
                 <ul class="dropdown-menu">
                     <li>
-
                         <form class="form-signin" action="/accounts/login" method="post">
                             <h3 class="form-signin-heading">Please log in</h3>
                             <label for="inputUsername" class="sr-only">Username</label>
@@ -36,7 +50,7 @@
 
             <li class="dropdown user user-menu notifications-menu" ng-show="user">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                    <img src="admin-lte/images/user2-160x160.png" class="user-image" alt="User Image"/>
+                    <img src="/admin-lte/images/user2-160x160.png" class="user-image" alt="User Image"/>
                     <span class="hidden-xs">{{user.username | capitalize:true}}</span>
                 </a>
                 <ul class="dropdown-menu">
@@ -58,3 +72,5 @@
         </ul>
     </div>
 </nav>
+
+</header>
