--- a/views/admin-lte/catalogs/course.ejs
+++ b/views/admin-lte/catalogs/course.ejs
@@ -37,16 +37,35 @@
             </h1>
         </section>
 
+        <!-- /.modal-content -->
+        <div id="rightClick" class="hide" ng-controller="RightClickMenuController as rc">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-body">
+                        <ul class="nav nav-pills nav-stacked">
+                            <li><a href="javascript:;" ng-click="createTopic('Web Tech')"> Create Topic </a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div><!-- /.modal-content -->
+
         <!-- Main content -->
-        <section class="content" id="tree">
+        <script src="/d3/d3.min.js"></script>
+        <section class="content" id="tree" ng-controller="TreeController as treeCtrl">
         </section><!-- /.content -->
     </div><!-- /.content-wrapper -->
 
 </div><!-- ./wrapper -->
+
+
+
 <% include ../jsfooter %>
+<script src="/d3/tree2.js"></script>
 <script>
     $(document).ready(function(){
         $('body').removeClass('sidebar-collapse');
+        $('#tree').handleRightClick().handleLeftClick();
     });
     app.directive('onFinishRender', function ($timeout) {
         return {
