--- a/views/admin-lte/catalogs/course2.ejs
+++ b/views/admin-lte/catalogs/course2.ejs
@@ -32,7 +32,6 @@
                 <li class="active">Web Tech</li>
             </ol>
 
-
         </section>
 
         <!-- /.modal-content -->
@@ -52,27 +51,15 @@
         <script src="/d3/d3.min.js"></script>
         <section class="content" id="tree" ng-controller="TreeController as treeCtrl">
 
-            <img style="float: left;" src="/img/_test_1.png" />
+            <img style="float: left;" src="/img/_test_1_2.png" />
 
-            <a href="/catalogs/web-tech2" class="linkingVideo video1"></a>
-
-            <a data-toggle="modal" data-target="#modalPdf" class="linkingPdf pdf1"></a>
-            <a data-toggle="modal" data-target="#modalPdf" class="linkingPdf pdf2"></a>
-            <a data-toggle="modal" data-target="#modalPdf" class="linkingPdf pdf3"></a>
-            <a data-toggle="modal" data-target="#modalPdf" class="linkingPdf pdf4"></a>
-
+            <a href="/catalogs/web-tech" class="linkingVideo back1"></a>
+            <a href="/catalogs/web-tech" class="linkingVideo back2"></a>
         </section><!-- /.content -->
     </div><!-- /.content-wrapper -->
 
 </div><!-- ./wrapper -->
 
-<div id="modalPdf" class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="modalPdfLabel" aria-hidden="true">
-    <div class="modal-dialog modal-lg">
-        <div class="modal-content">
-<img src="/img/pdf.jpg" style=" width: 100%;" onclick="$('#modalPdf').modal('hide');" />
-        </div>
-    </div>
-</div>
 
 
 <% include ../jsfooter %>
@@ -82,7 +69,7 @@
 <script>
     $(document).ready(function(){
         //$('#tree').handleRightClick().handleLeftClick();
-
+    });
     app.directive('onFinishRender', function ($timeout) {
         return {
             restrict: 'A',
@@ -95,6 +82,5 @@
             }
         }
     });
-
 </script>
 <% include ../footer %>
