add homepage mockup

--- a/views/admin-lte/index.ejs
+++ b/views/admin-lte/index.ejs
@@ -8,6 +8,7 @@
   <div class="content-wrapper">
     <!-- Main content -->
     <section class="content">
+      <img style="width: 100%;" src="/img/homepage.jpg" />
     </section><!-- /.content -->
   </div><!-- /.content-wrapper -->
 
