--- a/views/admin-lte/catalogs/course2.ejs
+++ b/views/admin-lte/catalogs/course2.ejs
@@ -62,7 +62,7 @@
 </div><!-- ./wrapper -->
 
 <div id="modalVideo" class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="modalVideoLabel" aria-hidden="true">
-    <div class="modal-dialog modal-lg">
+    <div class="modal-dialog modal-lg" style="width:80%!important;">
         <div class="modal-content">
             <img src="/img/video.jpg" style=" width: 100%;" onclick="$('#modalVideo').modal('hide');" />
         </div>
