--- a/views/admin-lte/catalogs/course.ejs
+++ b/views/admin-lte/catalogs/course.ejs
@@ -28,7 +28,7 @@
             <ol class="breadcrumb">
                 <li><a href="/"><i class="fa fa-home"></i> Home</a></li>
                 <li><a href="/catalogs/courses"> </i> Courses</a></li>
-                <li><a href="/catalogs/courses/I.T"> </i> I.T</a></li>
+                <li><a href="/catalogs/courses"> </i> I.T</a></li>
                 <li class="active">Web Tech</li>
             </ol>
 
