--- a/views/admin-lte/catalogs/courses.ejs
+++ b/views/admin-lte/catalogs/courses.ejs
@@ -38,7 +38,7 @@
     <!-- Main content -->
     <section class="content" ng-controller="CourseListController as courseList" id="courseList">
       <ul>
-        <li ng-repeat="c in courses.courses"><a href="/catalogs/web-tech">{{c.course}}</a></li>
+        <li class="course_repeat" ng-repeat="c in courses.courses"><a href="/catalogs/web-tech">{{c.course}}</a></li>
       </ul>
     </section><!-- /.content -->
   </div><!-- /.content-wrapper -->
