--- a/views/admin-lte/mainMenu.ejs
+++ b/views/admin-lte/mainMenu.ejs
@@ -8,10 +8,10 @@
         <ul class="nav navbar-nav">
             <!-- Messages: style can be found in dropdown.less-->
             <li class="dropdown tasks-menu">
-                <a href="/catalogs/courses"><b>Browse Courses</b></a>
+                <a href="/catalogs/courses"><i class="ion-navicon-round">&nbsp;&nbsp;&nbsp;</i><b>Browse Courses</b></a>
             </li>
             <li class="dropdown tasks-menu">
-            <a href="/catalogs/courses"><b>About Us</b></a>
+            <a href="/about"><i class="ion-information-circled"></i>&nbsp;&nbsp;&nbsp;<b>We are still in development</b></a>
         </li>
         </ul>
     </div>
