--- a/views/admin-lte/catalogs/course.ejs
+++ b/views/admin-lte/catalogs/course.ejs
@@ -51,7 +51,7 @@
         <!-- Main content -->
         <script src="/d3/d3.min.js"></script>
         <section class="content" id="tree" ng-controller="TreeController as treeCtrl">
-
+<h1 style="color: red;">Screen A</h1>
             <img style="float: left;" src="/img/_test_1.png" />
 
             <a href="/catalogs/web-tech2" class="linkingVideo video1"></a>
