--- a/views/admin-lte/mainMenu.ejs
+++ b/views/admin-lte/mainMenu.ejs
@@ -43,7 +43,7 @@
                 </ul>
             </li>
             <li class="" ng-hide="user">
-                <a href="/accounts/signUp">
+                <a href="#" onclick="alert('has not been implemented')">
                     <b>Sign Up</b>
                 </a>
             </li>
