--- a/views/admin-lte/catalogs/course2.ejs
+++ b/views/admin-lte/catalogs/course2.ejs
@@ -50,7 +50,7 @@
         <!-- Main content -->
         <script src="/d3/d3.min.js"></script>
         <section class="content" id="tree" ng-controller="TreeController as treeCtrl">
-
+            <h1 style="color: red;">Screen B</h1>
             <img style="float: left;" src="/img/_test_1_2.png" />
 
             <a href="/catalogs/web-tech" class="linkingVideo back1"></a>
