add static pages system with angular route

--- a/views/admin-lte/mainMenu.ejs
+++ b/views/admin-lte/mainMenu.ejs
@@ -11,7 +11,7 @@
                 <a href="/catalogs/courses"><i class="ion-navicon-round">&nbsp;&nbsp;&nbsp;</i><b>Browse Courses</b></a>
             </li>
             <li class="dropdown tasks-menu">
-            <a href="/about"><i class="ion-information-circled"></i>&nbsp;&nbsp;&nbsp;<b>We are still in development</b></a>
+            <a href="/static/#/about"><i class="ion-information-circled"></i>&nbsp;&nbsp;&nbsp;<b>We are still in development</b></a>
         </li>
         </ul>
     </div>
