--- a/views/admin-lte/statics/about.ejs
+++ b/views/admin-lte/statics/about.ejs
@@ -1,13 +1,4 @@
-<% include header %>
-<div class="wrapper">
 
-    <!-- Header Navbar -->
-    <% include mainMenu %>
-
-    <!-- Content Wrapper. Contains page content -->
-    <div class="content-wrapper" style="background-size:cover;background: url(img/bg.jpg) no-repeat center;">
-        <!-- Main content -->
-        <section class="content">
 
             <div class="container">
                 <div class="row ">
@@ -36,11 +27,9 @@
                     </div>
                 </div>
             </div>
-        </section>
-        <!-- /.content -->
-    </div>
-    <!-- /.content-wrapper -->
-
-</div><!-- ./wrapper -->
-<% include jsfooter %>
-<% include footer %>
+<style>
+    .content-wrapper{
+        background-size:cover;
+        background: url(/img/bg.jpg) no-repeat center; 
+    }
+</style>
