--- a/views/admin-lte/header.ejs
+++ b/views/admin-lte/header.ejs
@@ -8,7 +8,7 @@
     <link href="/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <link href="/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
     <link href="/ionicons/css/ionicons.min.css" rel="stylesheet" type="text/css" />
-    <link rel="icon" href="favicon.png" type="image/png" />
+    <link rel="icon" href="/favicon.png" type="image/png" />
 
     <!-- Themes -->
     <link href="/admin-lte/css/AdminLTE.min.css" rel="stylesheet" type="text/css" />
