--- a/views/admin-lte/login.ejs
+++ b/views/admin-lte/login.ejs
@@ -10,26 +10,16 @@
         <!-- Main content -->
         <section class="content">
             <div class="col-md-12">
-                <form class="form-horizontal" action='/accounts/signUp' method="POST">
+                <form class="form-horizontal" action='/accounts/login' method="POST">
                     <fieldset>
                         <div id="legend">
-                            <h1>Register</h1>
+                            <h1>Log In</h1>
                         </div>
                         <div class="control-group">
                             <!-- Username -->
                             <label class="control-label"  for="username">Username</label>
                             <div class="controls">
                                 <input type="text" id="username" name="username" placeholder="" class="form-control">
-                                <p class="help-block">Username can contain any letters or numbers, without spaces</p>
-                            </div>
-                        </div>
-
-                        <div class="control-group">
-                            <!-- E-mail -->
-                            <label class="control-label" for="email">E-mail</label>
-                            <div class="controls">
-                                <input type="text" id="email" name="email" placeholder="" class="form-control">
-                                <p class="help-block">Please provide your E-mail</p>
                             </div>
                         </div>
 
@@ -38,23 +28,20 @@
                             <label class="control-label" for="password">Password</label>
                             <div class="controls">
                                 <input type="password" id="password" name="password" placeholder="" class="form-control">
-                                <p class="help-block">Password should be at least 4 characters</p>
+                                <p class="help-block"> </p>
                             </div>
                         </div>
 
-                        <div class="control-group">
-                            <!-- Password -->
-                            <label class="control-label"  for="password_confirm">Password (Confirm)</label>
-                            <div class="controls">
-                                <input type="password" id="password_confirm" name="password_confirm" placeholder="" class="form-control">
-                                <p class="help-block">Please confirm password</p>
-                            </div>
+                        <div class="checkbox">
+                            <label>
+                                <input type="checkbox" value="yes" name="rememberMe"> Remember me
+                            </label><p class="help-block"> </p>
                         </div>
 
                         <div class="control-group">
                             <!-- Button -->
                             <div class="controls">
-                                <button class="btn btn-lg btn-primary btn-block">Register</button>
+                                <button class="btn btn-lg btn-primary btn-block">Login</button>
                             </div>
                         </div>
                     </fieldset>
