--- a/views/admin-lte/mainMenu.ejs
+++ b/views/admin-lte/mainMenu.ejs
@@ -58,15 +58,14 @@
                     <li>
                         <!-- inner menu: contains the actual data -->
                         <ul class="menu">
-                            <li><!--
-                                <a href="#">
-                                    <i class="ion-power"></i> Log Out
+                            <li>
+                                <a href="/accounts/{{user.username}}">
+                                    <i class="ionicons ion-gear-a"></i> My Account
                                 </a>
-                                -->
                             </li>
                         </ul>
                     </li>
-                    <li class="footer"> <a href="/accounts/logout"><i class="ion-power"></i> Log Out  </a></li>
+                    <li class="footer"> <a href="/accounts/logout"><i class="ionicons ion-log-out"></i> Log Out  </a></li>
                 </ul>
             </li>
         </ul>
