--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,1 +1,3 @@
-<% include config.theme/error %>
+<h1><%= message %></h1>
+<h2><%= error.status %></h2>
+<pre class="error"><%= error.stack %></pre>
