better bread crumb on route system, added category detail page

--- a/views/admin-lte/cm-admin/category.ejs
+++ b/views/admin-lte/cm-admin/category.ejs
@@ -2,62 +2,73 @@
 <div class="col-lg-12">
     <div class="box">
         <div class="box-body with-border">
-            <div ng-controller="CategoryListController as categoryList">
-                <table id="categoryList" class="table table-bordered table-hover" >
+            <div ng-controller="categoryDetailController as cat">
+                <table id="categoryList" class="table table-bordered  ">
                     <thead>
                     <tr>
-                        <th>Category</th>
+                        <th>Category : </th>
                     </tr>
                     </thead>
-                    <tbody ng-controller="categoryFormController as frm" >
+                    <tbody ng-controller="tagFormController as frm">
                     <tr>
                         <td>
                             <form role="form" ng-submit="processForm('root')" id="rootCategory">
                                 <div class="col-xs-6 input-group input-group-sm" ng-class="{ 'has-error' : errorName }">
                                     <input type="text" name="category" class="form-control input-sm col-xs-3"
                                            placeholder="Add New Category ..." ng-model="formData['root'].category"/>
-                                    <input type="hidden" name="parent" ng-value="0" value="0" ng-model="formData['root'].parentCategory" />
+                                    <input type="hidden" name="parent" ng-value="0" value="0"
+                                           ng-model="formData['root'].parentCategory"/>
 
                               <span class="input-group-btn">
-                              <button class="btn btn-info btn-flat" type="submit"><i class="fa fa-plus"></i> Add New Category
+                              <button class="btn btn-info btn-flat" type="submit"><i class="fa fa-plus"></i> Add New
+                                  Category
                               </button>
                               </span>
-                                </div><span class="help-block" ng-show="errorName">{{ errorName }}</span>
-                            </form>
-                        </td>
-                    </tr>
-                    <tr ng-repeat="category in categories.categories">
-                        <td >
-                            <p><span>{{category.category}}</span></p>
-                            <form role="form" ng-submit="processForm(category._id)">
-                                <div class="col-xs-6 input-group input-group-sm">
-                                    <input name="category" type="text" ng-model="formData[category._id].category" class="form-control input-sm col-xs-3" placeholder="Add Child ..."/>
-                                    <input type="hidden" name="parent" ng-value="category._id" value="category._id" ng-model="formData[category._id].parentCategory" ng-init="formData[category._id].parentCategory=category._id"/>
-                              <span class="input-group-btn">
-                              <button class="btn btn-info btn-flat" type="submit"><i class="fa fa-plus"></i> Add Child</button>
-                              </span>
-                                    <span class="help-block" ng-show="errorName">{{ errorName }}</span>
                                 </div>
+                                <span class="help-block" ng-show="errorName">{{ errorName }}</span>
                             </form>
-                            <ul class="nav nav-pills nav-stacked" ng-show="(category.subCategories.length)">
-                                <h4>Child sub categories: </h4>
-                                <li ng-repeat="subCategory in category.subCategories">
-                                    <a href="#">{{subCategory.category}}</a>
-                                </li>
-                            </ul>
                         </td>
                     </tr>
                     </tbody>
                 </table>
-
+                <div class="panel box box-primary">
+                    <div class="box-header with-border">
+                        <h4 class="box-title">
+                            <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
+                                Tags:
+                            </a>
+                        </h4>
+                    </div>
+                    <div id="collapseOne" class="panel-collapse collapse in">
+                        <div class="box-body">
+                            <ul class="nav nav-pills nav-stacked" ng-show="(tags.length)">
+                                <li ng-repeat="tag in tags">
+                                    <a href="">{{tag.tag}}</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="panel box box-primary">
+                    <div class="box-header with-border">
+                        <h4 class="box-title">
+                            <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
+                                Courses:
+                            </a>
+                        </h4>
+                    </div>
+                    <div id="collapseTwo" class="panel-collapse collapse in">
+                        <div class="box-body">
+                            <ul class="nav nav-pills nav-stacked" ng-show="(courses.length)">
+                                <li ng-repeat="course in courses">
+                                    <a href="#/courses/{{course._id}}">{{course.course}}</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
         <!-- /.box-body -->
     </div>
 </div>
-<script>
-$('document').ready(function(){
-    //$("#categoryList").dataTable();
-});
-
-</script>
