--- a/views/admin-lte/cm-admin/category.ejs
+++ b/views/admin-lte/cm-admin/category.ejs
@@ -3,43 +3,31 @@
     <div class="box">
         <div class="box-body with-border">
             <div ng-controller="categoryDetailController as cat">
-                <table id="categoryList" class="table table-bordered  ">
-                    <thead>
-                    <tr>
-                        <th>Category : </th>
-                    </tr>
-                    </thead>
-                    <tbody ng-controller="tagFormController as frm">
-                    <tr>
-                        <td>
-                            <form role="form" ng-submit="processForm('root')" id="rootCategory">
-                                <div class="col-xs-6 input-group input-group-sm" ng-class="{ 'has-error' : errorName }">
-                                    <input type="text" name="category" class="form-control input-sm col-xs-3"
-                                           placeholder="Add New Category ..." ng-model="formData['root'].category"/>
-                                    <input type="hidden" name="parent" ng-value="0" value="0"
-                                           ng-model="formData['root'].parentCategory"/>
-
-                              <span class="input-group-btn">
-                              <button class="btn btn-info btn-flat" type="submit"><i class="fa fa-plus"></i> Add New
-                                  Category
-                              </button>
-                              </span>
-                                </div>
-                                <span class="help-block" ng-show="errorName">{{ errorName }}</span>
-                            </form>
-                        </td>
-                    </tr>
-                    </tbody>
-                </table>
+                <h3>Category : {{$routeParams.category}}</h3>
                 <div class="panel box box-primary">
                     <div class="box-header with-border">
                         <h4 class="box-title">
-                            <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
+                            <a data-toggle="collapse" data-parent="#accordion" href="">
                                 Tags:
                             </a>
                         </h4>
                     </div>
-                    <div id="collapseOne" class="panel-collapse collapse in">
+                    <div id="collapseOne" class="panel-collapse collapse in" ng-controller="tagFormController">
+                        <form role="form" ng-submit="processForm()" id="rootCategory">
+                            <div class="col-xs-6 input-group input-group-sm" ng-class="{ 'has-error' : errorName }">
+                                <input type="text" name="category" class="form-control input-sm col-xs-3"
+                                       placeholder="Add New Tags ..." ng-model="formData.tag"/>
+                                <input type="hidden" name="parent" ng-value="category" value="{{category}}"
+                                       ng-model="formData.category" ng-init="formData.category=category" />
+                              <span class="input-group-btn">
+                              <button class="btn btn-info btn-flat" type="submit" ng-click="setCategory(category)"><i class="fa fa-plus"></i> Add New
+                                  Tag
+                              </button>
+                              </span>
+                            </div>
+                            <span class="help-block" ng-show="errorName">{{ errorName }}</span>
+                        </form>
+
                         <div class="box-body">
                             <ul class="nav nav-pills nav-stacked" ng-show="(tags.length)">
                                 <li ng-repeat="tag in tags">
@@ -52,7 +40,7 @@
                 <div class="panel box box-primary">
                     <div class="box-header with-border">
                         <h4 class="box-title">
-                            <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
+                            <a data-toggle="collapse" data-parent="#accordion" href="">
                                 Courses:
                             </a>
                         </h4>
