--- a/views/admin-lte/cm-admin/header.ejs
+++ b/views/admin-lte/cm-admin/header.ejs
@@ -13,6 +13,7 @@
     <!-- Themes -->
     <link href="/admin-lte/css/AdminLTE.min.css" rel="stylesheet" type="text/css" />
     <link href="/admin-lte/css/skin-blue.min.css" rel="stylesheet" type="text/css" />
+    <link href="/admin-lte/css/app.css" rel="stylesheet" type="text/css" />
 
     <!-- Extras -->
     <link href="/d3/tree.css" rel="stylesheet" type="text/css" />
