add zoom in and mini map

--- a/public/admin-lte/css/app.css
+++ b/public/admin-lte/css/app.css
@@ -140,3 +140,70 @@ i.ionicons{
     display: block;
     height:240px;
 }
+/* custom inclusion of right, left and below tabs */
+
+.tabs-left > .nav-tabs {
+    border-bottom: 0;
+    width: 128px;
+}
+
+.tab-content > .tab-pane,
+.pill-content > .pill-pane {
+    display: none;
+}
+
+.tab-content{
+    margin-left: 156px;
+    min-height: 100%;
+}
+.tab-content > .active,
+.pill-content > .active {
+    display: block;
+}
+ 
+.nav-tabs .ionicons{
+    font-size: 50px;
+}
+.tabs-left > .nav-tabs > li {
+    float: none;
+    height:100px;
+    text-align: center;
+}
+
+.tabs-left > .nav-tabs > li > a  {
+    min-width: 74px;
+    margin-right: 0;
+    margin-bottom: 3px;
+    height:100px;
+}
+
+.tabs-left > .nav-tabs {
+    float: left;
+    margin-right: 19px;
+    border-right: 1px solid #ddd;
+}
+
+.tabs-left > .nav-tabs > li > a {
+    margin-right: -1px;
+    -webkit-border-radius: 4px 0 0 4px;
+    -moz-border-radius: 4px 0 0 4px;
+    border-radius: 4px 0 0 4px;
+}
+
+.tabs-left > .nav-tabs > li > a:hover,
+.tabs-left > .nav-tabs > li > a:focus {
+    border-color: #eeeeee #dddddd #eeeeee #eeeeee;
+}
+
+.tabs-left > .nav-tabs .active > a,
+.tabs-left > .nav-tabs .active > a:hover,
+.tabs-left > .nav-tabs .active > a:focus {
+    border-color: #ddd transparent #ddd #ddd;
+    *border-right-color: #ffffff;
+}
+
+.follow{
+    float: left;
+    width: 120px;
+    margin: 22px 20px 10px 20px;
+}
